# odds-engine

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TUI_CLAUDE.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 02f4bf42e179_add_bookmakers_to_enriched_snapshots.py  218ef530bb5e_initial_schema.py  800a6a0a903d_add_opening_line_to_events.py  997ed84a772b_backfill_sport_group_basketball_to_.py  aa04ff78e30f_backfill_sport_group_tennis_to_atp_wta.py  cb0f84e689bd_backfill_opening_line_from_first_.py
src/odds_engine/: config.py  dependencies.py  exceptions.py  logging.py  main.py  sport_groups.py
src/odds_engine/api/: middleware.py  router.py
src/odds_engine/clients/: odds_api.py
src/odds_engine/models/: database.py  enums.py  events.py  odds.py
src/odds_engine/repositories/: cache_repo.py  event_repo.py  odds_repo.py
src/odds_engine/schemas/: enriched.py  events.py  odds.py  odds_api.py
src/odds_engine/services/: enrichment.py  event_service.py  odds_service.py  publisher.py  scheduler.py
tests/: conftest.py
tests/api/: test_events_endpoint.py  test_health_endpoint.py  test_odds_endpoint.py  test_ws.py
tests/fixtures/odds_api/: events_basketball_ncaab.json  events_tennis_atp_indian_wells.json  events_tennis_wta_indian_wells.json  odds_basketball_ncaab.json  odds_basketball_ncaab_headers.json  odds_tennis_atp_indian_wells.json  (+2 more)
tests/integration/: test_cache_repo.py  test_event_repo.py  test_full_pipeline.py  test_odds_repo.py  test_pipeline_smoke.py
tests/unit/: test_enrichment.py  test_event_service.py  test_odds_api_client.py  test_odds_service.py  test_publisher.py  test_scheduler.py
(+6 files in other folders)
